--- a/styles/main.css
+++ b/styles/main.css
@@ -5,8 +5,10 @@
 }
 
 :root {
-    --loc-card-size: 420px;
-    --loc-size: 400px
+  --loc-card-h: 420px;
+  --loc-card-w: 420px;
+  --loc-h: 400px;
+  --loc-w: 400px;
 }
 html,
 body {
@@ -17,13 +19,13 @@ body {
 }
 .navbar {
   width: 100%;
-  border: solid white 2px;
+  /* border: solid white 2px; */
   height: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.8rem;
-  background-color: white;
+  /* background-color: white; */
 }
 
 .coming-soon {
@@ -46,19 +48,18 @@ body {
 }
 
 .loc-card {
-  
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.5);
   filter: blur(1rem);
-  width: var(--loc-card-size);
-  height: var(--loc-card-size);
+  width: var(--loc-card-w);
+  height: var(--loc-card-h);
   position: absolute;
 }
 
 .loc {
   z-index: 5;
-  width: var(--loc-size);
-  height: var(--loc-size);
+  width: var(--loc-w);
+  height: var(--loc-h);
 }
 
 /* ultra small */
@@ -88,10 +89,12 @@ body {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    :root {
-        --loc-card-size: 520px;
-        --loc-size: 500px;
-    }
+  :root {
+    --loc-card-h: 520px;
+    --loc-h: 500px;
+    --loc-card-w: 820px;
+    --loc-w: 800px;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
