--- a/styles/main.css
+++ b/styles/main.css
@@ -5,9 +5,9 @@
 }
 
 :root {
-  --loc-card-h: 420px;
+  --loc-card-h: 305px;
   --loc-card-w: 420px;
-  --loc-h: 400px;
+  --loc-h: 300px;
   --loc-w: 400px;
 }
 html,
@@ -16,7 +16,13 @@ body {
   height: 100vh;
   background-color: black;
   color: white;
-}
+  }
+
+ .theme-image {
+   display: flex;
+   justify-content: center;
+   margin-bottom: 3rem;
+ }
 .navbar {
   width: 100%;
   /* border: solid white 2px; */
@@ -30,7 +36,7 @@ body {
 
 .coming-soon {
   width: 100%;
-  height: 20vh;
+  height: 15vh;
   color: #bbb;
   display: flex;
   align-items: center;
