--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  margin-bottom: 10rem;
 }
 
 .loc-card {
@@ -45,6 +46,62 @@
   justify-content: center;
   margin-bottom: 3rem;
 }
+
+
+
+
+/* -------------------------Past Events Section--------------- */
+
+.section-title {
+  display: flex;
+  justify-content: center;
+}
+.title-text{
+  font-size: 2.7rem;
+  padding-left: 1rem;
+  color: black;
+  border-left: 5px solid red;
+  margin-bottom: 4rem;
+}
+
+.past-event-section {
+  background-color: white;
+}
+
+.event-theme {
+  color: var(--col-gray);
+
+}
+
+.event-theme > strong {
+  margin-bottom: 20px;
+}
+
+.event-card {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.5rem;
+  padding: 2rem;
+  width: 400px;
+}
+
+.event-peek {
+ margin-bottom: 2rem;
+ width:100%;
+}
+
+.event-name {
+  color: var(--col-link);
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+/* -------------------------END: Past Events Section--------------- */
+
+
+
+
+
+/* -------------------------Footer Section--------------- */
 footer {
 
   margin-top: 10rem;
@@ -83,34 +140,8 @@ footer {
   align-items: center;
   padding: 50px;
 }
+/* ------------END: Footer Section  */
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .footers {
-    max-width: 500px;
-  }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  .footers {
-    max-width: 600px;
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  .footers {
-    max-width: 800px;
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .footers {
-    max-width: 1000px;
-  }
-}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
