--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+a {
+  text-decoration: none;
+}
+:root {
+  --col-primary: #f13a11;
+  --col-dark:rgba(6, 12, 24, 0.98);
+  --col-gray: #909090;
+  --col-link: #404040;
+  --col-p:#666262;
+}
 
 html,
 body {
@@ -12,6 +22,7 @@ body {
   color: white;
   font-family: 'Helvetica', 'Helvetica Neue', Helvetica, Arial, sans;
   }
+
 
 .navbar {
   width: 100%;
@@ -24,6 +35,14 @@ body {
   /* background-color: white; */
 }
 
+.section {
+  padding: 4rem 10vw;
+
+}
+
+.container {
+  margin: 0 auto;
+}
 
 /* ultra small */
 /* Extra small devices (phones, 600px and down) */
@@ -35,6 +54,9 @@ body {
   }
   .nav-brand {
     width: 60%;
+  }
+  .container {
+    width: 80%;
   }
 }
 
@@ -48,17 +70,26 @@ body {
   .nav-brand {
     width: 30%;
   }
+  .container {
+    max-width: 500px;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-/* @media only screen and (min-width: 768px) {
-  
-} */
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 600px;
+  }
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .nav-brand {
     width: 20%;
+  }
+
+  .container {
+    max-width: 800px;
   }
 }
 
@@ -67,4 +98,8 @@ body {
   .nav-brand {
     width: 15%;
   }
+  .container {
+    max-width: 1000px;
+  }
 }
+
