--- a/styles/index.css
+++ b/styles/index.css
@@ -104,7 +104,7 @@
 /* -------------------------Footer Section--------------- */
 footer {
 
-  margin-top: 10rem;
+  /* margin-top: 10rem; */
   padding-bottom: 3rem;
   background-color: rgba(255,255,255, 0.1)
 }
